# aethercursor

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
agents/: cloud-deep-explain.json  cloud-explain.json  cloud-summarize.json  cloud-table-extract.json  cloud-translate.json  cloud-vision-analyze.json  local-ocr.json
docs/: p0-validation.md  p1-validation.md  p10-validation.md  p11-validation.md  p12-validation.md  p13-validation.md  p14-validation.md  p15-validation.md  p16-validation.md  p2-validation.md  p21-validation.md  p22-validation.md  p23-validation.md  p3-validation.md  p4-validation.md  p5-validation.md  p6-1-validation.md  p6-validation.md  p7-validation.md  p8-validation.md  p9-validation.md  phase-progress.md
schemas/: agent-manifest.schema.json  agent-result.schema.json  context.schema.json
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/agents/: agentRegistry.test.ts  agentRegistry.ts
src/capabilities/: capabilitySettings.test.ts  capabilitySettings.ts
src/capture/: contextCapture.test.ts  contextCapture.ts  contextResolver.test.ts  contextResolver.ts  nativeCapture.ts  selectedText.test.ts  selectedText.ts
src/cloud/: cloudLlmAdapter.test.ts  cloudLlmAdapter.ts  cloudServiceConfig.test.ts  cloudServiceConfig.ts
src/cursor/: stateMachine.test.ts  stateMachine.ts
src/desktop/: desktopCoordinates.test.ts  desktopCoordinates.ts  desktopOverlay.test.ts  desktopOverlay.ts  (+2 more)
(+43 files in other folders)
