[package]
name = "aethercursor"
version = "0.1.0"
description = "AetherCursor desktop shell"
authors = ["AetherCursor Contributors"]
edition = "2021"

[lib]
name = "aethercursor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging"
] }
